; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_scsi.c_zfcp_reset_fc_host_stats.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_scsi.c_zfcp_reset_fc_host_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Scsi_Host = type { i64* }
%struct.zfcp_adapter = type { i32, %struct.fsf_qtcb_bottom_port*, i32 }
%struct.fsf_qtcb_bottom_port = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@jiffies = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Scsi_Host*)* @zfcp_reset_fc_host_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zfcp_reset_fc_host_stats(%struct.Scsi_Host* %0) #0 {
  %2 = alloca %struct.Scsi_Host*, align 8
  %3 = alloca %struct.zfcp_adapter*, align 8
  %4 = alloca %struct.fsf_qtcb_bottom_port*, align 8
  %5 = alloca i32, align 4
  store %struct.Scsi_Host* %0, %struct.Scsi_Host** %2, align 8
  %6 = load %struct.Scsi_Host*, %struct.Scsi_Host** %2, align 8
  %7 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %6, i32 0, i32 0
  %8 = load i64*, i64** %7, align 8
  %9 = getelementptr inbounds i64, i64* %8, i64 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.zfcp_adapter*
  store %struct.zfcp_adapter* %11, %struct.zfcp_adapter** %3, align 8
  %12 = load i32, i32* @GFP_KERNEL, align 4
  %13 = call %struct.fsf_qtcb_bottom_port* @kzalloc(i32 4, i32 %12)
  store %struct.fsf_qtcb_bottom_port* %13, %struct.fsf_qtcb_bottom_port** %4, align 8
  %14 = load %struct.fsf_qtcb_bottom_port*, %struct.fsf_qtcb_bottom_port** %4, align 8
  %15 = icmp ne %struct.fsf_qtcb_bottom_port* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %1
  br label %41

17:                                               ; preds = %1
  %18 = load %struct.zfcp_adapter*, %struct.zfcp_adapter** %3, align 8
  %19 = getelementptr inbounds %struct.zfcp_adapter, %struct.zfcp_adapter* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.fsf_qtcb_bottom_port*, %struct.fsf_qtcb_bottom_port** %4, align 8
  %22 = call i32 @zfcp_fsf_exchange_port_data_sync(i32 %20, %struct.fsf_qtcb_bottom_port* %21)
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %17
  %26 = load %struct.fsf_qtcb_bottom_port*, %struct.fsf_qtcb_bottom_port** %4, align 8
  %27 = call i32 @kfree(%struct.fsf_qtcb_bottom_port* %26)
  br label %41

28:                                               ; preds = %17
  %29 = load i32, i32* @jiffies, align 4
  %30 = load i32, i32* @HZ, align 4
  %31 = sdiv i32 %29, %30
  %32 = load %struct.zfcp_adapter*, %struct.zfcp_adapter** %3, align 8
  %33 = getelementptr inbounds %struct.zfcp_adapter, %struct.zfcp_adapter* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 8
  %34 = load %struct.zfcp_adapter*, %struct.zfcp_adapter** %3, align 8
  %35 = getelementptr inbounds %struct.zfcp_adapter, %struct.zfcp_adapter* %34, i32 0, i32 1
  %36 = load %struct.fsf_qtcb_bottom_port*, %struct.fsf_qtcb_bottom_port** %35, align 8
  %37 = call i32 @kfree(%struct.fsf_qtcb_bottom_port* %36)
  %38 = load %struct.fsf_qtcb_bottom_port*, %struct.fsf_qtcb_bottom_port** %4, align 8
  %39 = load %struct.zfcp_adapter*, %struct.zfcp_adapter** %3, align 8
  %40 = getelementptr inbounds %struct.zfcp_adapter, %struct.zfcp_adapter* %39, i32 0, i32 1
  store %struct.fsf_qtcb_bottom_port* %38, %struct.fsf_qtcb_bottom_port** %40, align 8
  br label %41

41:                                               ; preds = %16, %28, %25
  ret void
}

declare dso_local %struct.fsf_qtcb_bottom_port* @kzalloc(i32, i32) #1

declare dso_local i32 @zfcp_fsf_exchange_port_data_sync(i32, %struct.fsf_qtcb_bottom_port*) #1

declare dso_local i32 @kfree(%struct.fsf_qtcb_bottom_port*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
